# SpaceFleet

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: collector.py  config.py  database.py  main.py  models.py  notifier.py  scheduler.py  schemas.py  ssh_client.py
backend/app/routers/: alerts.py  disks.py  servers.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  chart.js
