[project]
name = "space-manager-backend"
version = "0.1.0"
description = "Backend for Space Manager"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "paramiko>=3.4.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
